--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="Container">
   <!-- last card -->
   <div class="Picture-video" id="video">
-    <iframe class="Picture-img-video" width="600" height="580"  src="lv_0_20241115194049.mp4" frameborder="0" allowfullscreen></iframe>
+    <iframe class="Picture-img-video" width="600" height="580"  src="WhatsApp Video 2024-11-24 at 23.13.52_b7e7c9f2.mp4" frameborder="0" allowfullscreen></iframe>
     <div class="Picture-note-video">
       <div class="letter"><span></span></div>
       <span>
@@ -21,7 +21,7 @@
   
   <!-- other cards -->
   <div class="Picture">
-    <img class="Picture-img" src="Anu/Screenshot_20231124-155312_Instagram.jpg" alt="" />
+    <img class="Picture-img" src="Anu/Screenshot_20231124-154520_Instagram.jpg" alt="" />
     <div class="Picture-note"><span>i found a lover</span></div>
   </div>
   <div class="Picture">
