--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
   
   <!-- other cards -->
   <div class="Picture">
-    <img class="Picture-img" src="Anu/Screenshot_20231124-154520_Instagram.jpg" alt="" />
+    <img class="Picture-img" src="photos/Screenshot_20231124-154520_Instagram.jpg" alt="" />
     <div class="Picture-note"><span>i found a lover</span></div>
   </div>
   <div class="Picture">
-    <img class="Picture-img" src="Anu/IMG-20240324-WA0021.jpg" alt="" />
+    <img class="Picture-img" src="photos/IMG-20240324-WA0021.jpg" alt="" />
     <div class="Picture-note"><span>i'll share her home</span></div>
   </div>
   <div class="Picture">
-    <img class="Picture-img" src="Anu/IMG-20240114-WA0011.jpg" alt="" />
+    <img class="Picture-img" src="photos/IMG-20240114-WA0011.jpg" alt="" />
     <div class="Picture-note"><span>i hope that someday</span></div>
   </div>
   <div class="Picture">
-    <img class="Picture-img" src="Anu/IMG-20231111-WA0022.jpg" alt="" />
+    <img class="Picture-img" src="photos/IMG-20231111-WA0022.jpg" alt="" />
     <div class="Picture-note"><span>she shares my dreams</span></div>
   </div>
   <div class="Picture">
-    <img class="Picture-img" src="Anu\IMG-20231020-WA0008.jpg" alt="" />
+    <img class="Picture-img" src="photos\IMG-20231020-WA0008.jpg" alt="" />
     <div class="Picture-note"><span>stronger than anyone i know</span></div>
   </div>
   <div class="Picture">
-    <img class="Picture-img" src="Anu\20240331_200522.jpg" alt="" />
+    <img class="Picture-img" src="photos\20240331_200522.jpg" alt="" />
     <div class="Picture-note"><span>Well found a women</span></div>
   </div>
 </div>
